--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-form-catalog": "^1.0.16",
     "sass": "^1.62.1",
     "typescript": "5.0.4"
   },
