--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -11,8 +11,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
-          project: ./site
           browser: chrome
-          build: yarn build
-          start: yarn start
+          build: npm run build
+          start: npm start
           wait-on: "http://localhost:3000"
