--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -12,6 +12,6 @@ jobs:
         uses: cypress-io/github-action@v5
         with:
           browser: chrome
-          build: npm run build
-          start: npm start
+          build: yarn build
+          start: yarn start
           wait-on: "http://localhost:3000"
